# SikuliCTest

./: .gitignore  CMakeLists.txt
CMake/: FindSikuli.cmake
Documentation/: Article.tex  Article.tex.backup  Untitled.xcf  biblio.bib
test.sikuli/: test.html  test.py
test2.sikuli/: test2.html  test2.py
test3.sikuli/: test3.html  test3.py
test4.sikuli/: test4.html  test4.py
